--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript-eslint": "^8.2.0"
   },
   "dependencies": {
+    "jsep": "^1.3.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "xlsx": "^0.18.5"
