--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,6 +107,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "index.ts"
+    "index.ts",
+    "expression-eval.ts"
   ]
 }
